<resources>
    <string name="app_name">Joystick</string>
    <string name="delay">270</string>
    <string name="start_search">Начать поиск</string>
    <string name="forward">forward</string>
    <string name="stop">stop</string>
    <string name="backward">backward</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="info">info</string>
</resources>