<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/device_name"
            android:textSize="34sp"
            android:textColor="@color/color_accent"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button_info"
            android:background="@drawable/info"
            android:contentDescription="@string/info"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="0dp"
            android:layout_alignEnd="@+id/button_right"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:alpha="0.8" />

    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/button_forward"
            android:background="@drawable/forward_button"
            android:contentDescription="@string/forward"
            android:layout_above="@+id/button_stop"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/button_stop"
            android:contentDescription="@string/stop"
            android:background="@drawable/stop_button"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/button_backward"
            android:background="@drawable/backward_button"
            android:contentDescription="@string/backward"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button_stop" />

    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/button_left"
            android:background="@drawable/left_button"
            android:contentDescription="@string/left"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/button_stop"
            android:layout_marginEnd="10dp" />

    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/button_right"
            android:background="@drawable/right_button"
            android:contentDescription="@string/right"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/button_stop"
            android:layout_marginStart="10dp" />

</RelativeLayout>